crates/data-dict/tests/snapshots/validate_spec__missing_version.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
tables: []
────────────────────────────────────────
error[S18]: A document must declare the spec version it conforms to with `$version`.
  --> dict.yaml:1:1
   |
LL | tables: []
   | ^ `$version` is not set
   |
help: declare the spec version
   |
LL + $version: 0.1.0
   |
